cks/ADV-CNP_with_L3_L4_mutual_auth/manifests/02-deploy-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: team-blue
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app-a
  template:
    metadata:
      labels:
        role: app-a
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: team-blue
spec:
  selector:
    role: app-a
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
