cks/ADV-CNP_with_L3_L4_mutual_auth/manifests/03-deploy-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: team-blue
  labels:
    app: app-b
spec:
  replicas: 2
  selector:
    matchLabels:
      role: app-b
  template:
    metadata:
      labels:
        role: app-b
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: team-blue
spec:
  selector:
    role: app-b
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
