cks/ADV-CNP_with_L3_L4_mutual_auth/manifests/04-deploy-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-c
  namespace: team-blue
  labels:
    app: app-c
spec:
  replicas: 2
  selector:
    matchLabels:
      role: app-c
  template:
    metadata:
      labels:
        role: app-c
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: team-blue
spec:
  selector:
    role: app-c
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
