cks/ADV-CNP_with_L3_L4_mutual_auth/manifests/06-cnp-default-allow.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-allow
  namespace: team-blue
spec:
  endpointSelector:
    matchLabels: {}  # Apply to all Pods in namespace

  egress:
    - toEndpoints:
        - {}  # allow traffic to all Pods in the namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

  ingress:
    - fromEndpoints:
        - {}  # allow ingress from all Pods in the namespace
